# eam-data-pipe-demo

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/skills/: agent.md
airflow/dags/: bronze_ingest_dag.py  cdc_merge_application_dag.py  dbt_postgres_transform_dag.py  eam_simulator_dag.py  gold_rollups_dag.py  s5000f_transform_dag.py
config/: __init__.py  settings.py
docs/: architecture.md  query_module.md  s5000f_mapping.md
docs/data_contracts/: README.md  bronze_odcs.yaml  gold_odcs.yaml  silver_odcs.yaml  silver_s5000f_odcs.yaml
docs/data_products/: README.md  bronze_odps.yaml  gold_odps.yaml  silver_odps.yaml  silver_s5000f_odps.yaml
eam_simulator/: __init__.py  event_generator.py  produce_cdc.py
eam_simulator/entities/: __init__.py  asset.py  maintenance_action.py  work_order.py  work_request.py
scripts/: init-kafka-topics.sh  init-minio-buckets.sh  run_demo.sh
tests/: conftest.py  test_cdc_merge.py  test_config.py  test_entities.py  test_event_generator.py  test_s5000f_transforms.py
transforms/dbt/: .gitignore  .user.yml  README.md  dbt_project.yml
transforms/dbt/macros/: get_iceberg_snapshot_id.sql
transforms/dbt/models/: schema.yml
transforms/polars/: __init__.py
transforms/polars/app/: __init__.py  bronze_ingest.py  cdc_merge.py  iceberg_io.py  merge_asset.py  merge_maintenance_action.py  merge_work_order.py  merge_work_request.py
transforms/polars/gold/: __init__.py  asset_availability.py  maintenance_history.py  mtbf_metrics.py  (+1 more)
(+32 files in other folders)
